파일 경로 수정 및 gitignore 에 .task 파일 추가

--- a/.gitignore
+++ b/.gitignore
@@ -206,4 +206,6 @@ poetry.toml
 # LSP config files
 pyrightconfig.json
 
+models/*.task
+
 # End of https://www.toptal.com/developers/gitignore/api/macos,python
