캘리브레이션 저장 방식 변경으로 인해 gitignore 파일 수정

--- a/.gitignore
+++ b/.gitignore
@@ -207,6 +207,6 @@ poetry.toml
 pyrightconfig.json
 
 models/*.task
-calibration.yaml
+calibration/
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,python
